crates/aranya-policy-lang/tests/data/error_line_number_in_chunks/two_chunk_syntax_error.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Syntax error
   |
11 |     let = 2
   |         ^ expected identifier
